traces/bug_362.txt
src/medit/inout_morice.c:1080: error: DEAD_STORE
  The value written to &k (type int) is never used.
Showing all 1 steps of the trace


src/medit/inout_morice.c:1080:7: Write of unused value
1078.         assert(mesh->extra->tv);
1079.         
1080.         k=1;
              ^
1081.         getline_popen_firstelemnoref(natureread, 2, vatn);
1082.         nn=vatn[0];
